# cmake_cuda_test

./: CMakeLists.txt  README.md  gpu.cu.cc  main.cc
